# persway

./: Cargo.toml  LICENSE  README.md  flake.nix  result
devenv/: default.nix
flake/: devenv.nix  packages.nix
src/: client.rs  commands.rs  layout.rs  main.rs  node_ext.rs  utils.rs  wallpaper.rs
src/server/: daemon.rs  message_handler.rs
src/server/command_handlers/layout/: stack_main.rs
src/server/event_handlers/layout/: spiral.rs  stack_main.rs
src/server/event_handlers/misc/: window_focus.rs  workspace_renamer.rs
