[package]
name = "persway"
version = "0.6.2"
authors = [
	"John Axel Eriksson <john@insane.se>",
	"T. Sawyer <saylesss87@proton.me",
]
edition = "2024"
description = "Sway IPC daemon"
repository = "https://github.com/johnae/persway"
readme = "README.md"
license = "MIT"
categories = ["asynchronous", "concurrency", "network-programming"]
keywords = ["sway", "swaywm", "swayipc", "ipc", "async"]

[dependencies]
clap = {version = "4.5", features = ["derive"]}
log = "0.4"
either = "1.15.0"
env_logger = "0.11.8"
swayipc-async = "3.0.0"
swayipc-types = "2.0.1"
# async-std = {version = "1.13.2", features = ["attributes"]}
# signal-hook-async-std = "0.4.0"
tokio = {version = "1", features = ["full"]}
signal-hook-tokio = {version = "0.4", features = ["futures-v0_3"]}
signal-hook = "0.4.3"
anyhow = "1.0.100"
futures = "0.3.31"
