[package]
name = "persway-tokio"
version = "0.8.3" # successor to persway 0.6.2
authors = [
	"John Axel Eriksson <john@insane.se>",
	"T. Sawyer <saylesss87@proton.me>",
]
edition = "2024"
description = "Sway layout and focus helper daemon that adds spiral and stack-main autotiling plus opacity and window renaming."
repository = "https://github.com/saylesss88/persway"
readme = "README.md"
license = "MIT"
categories = ["asynchronous", "concurrency", "network-programming"]
keywords = ["sway", "swaywm", "swayipc", "ipc", "async"]
exclude = [
	".envrc",
	".github",
	".gitignore",
	"devenv",
	"devshell",
	"devshell.toml",
	"flake",
	"flake.lock",
	"flake.nix",
	"result",
	"rustfmt.toml",
]
resolver = "3"

[dependencies]
clap = {version = "4.6", default-features = false, features = ["derive", "std"]}
log = "0.4"
either = "1.16.0"
env_logger = "0.11.10"
swayipc-async = "3.0.0"
swayipc-types = "2.0.1"
tokio = {version = "1", default-features = false, features = [
	"fs",
	"io-std",
	"io-util",
	"libc",
	"macros",
	"net",
	"parking_lot",
	"process",
	"rt",
	"rt-multi-thread",
	"signal",
	"signal-hook-registry",
	"socket2",
	"sync",
	"time",
	"tokio-macros",
]}
signal-hook-tokio = {version = "0.4", default-features = false, features = [
	"futures-v0_3",
]}
signal-hook = "0.4.4"
anyhow = "1.0.102"
futures = "0.3.32"
randpaper_lib = {version = "0.1.0", optional = true}

[[bin]]
name = "persway"
path = "src/main.rs"

[profile.release]
lto = "thin"
panic = "abort"
strip = true
codegen-units = 1

[features]
default = []
wallpaper = ["dep:randpaper_lib"]
